# radeon_gpu_analyzer

./: .gitignore  .readthedocs.yaml  CMakeLists.txt  LICENSE.txt  License.txt  README.md  RGAConfig.h  RGAConfig.h.in  RGAThirdPartyLicenses.txt  RGA_README.md  UpdateCommon-PreRelease.py  UpdateCommon.py  _clang-format
RadeonGPUAnalyzerBackend/: CMakeLists.txt  RadeonGPUAnalyzerBackendConfig.h.in
RadeonGPUAnalyzerBackend/Include/: beBackend.h  beD3DIncludeManager.h  beInclude.h  beOpenCLDefs.h  beProgramBuilderDX.h  beProgramBuilderDX11.h  beProgramBuilderDX12.h  beProgramBuilderLightning.h  beProgramBuilderOpenCL.h  beProgramBuilderOpenGL.h  beProgramBuilderVkOffline.h  beProgramBuilderVulkan.h  beStaticIsaAnalyzer.h  beStringConstants.h  beUtils.h  be_data_types.h
RadeonGPUAnalyzerBackend/Src/: beBackend.cpp  beD3DIncludeManager.cpp  beProgramBuilder.cpp  beProgramBuilderDX.cpp  beProgramBuilderDX11.cpp  beProgramBuilderDX12.cpp  beProgramBuilderOpenCL.cpp  beProgramBuilderOpenGL.cpp  beProgramBuilderVkOffline.cpp  beProgramBuilderVulkan.cpp  beStaticIsaAnalyzer.cpp  beUtils.cpp  be_backend.cpp  be_backend.h  be_d3d_include_manager.cpp  be_include.h  be_opencl_definitions.h  be_program_builder.cpp  be_program_builder.h  be_program_builder_dx11.cpp  be_program_builder_dx11.h  be_program_builder_dx12.cpp  be_program_builder_dx12.h  be_program_builder_lightning.cpp  be_program_builder_lightning.h  be_program_builder_opencl.cpp  be_program_builder_opencl.h  be_program_builder_opengl.cpp  be_program_builder_opengl.h  be_program_builder_vk_offline.cpp  be_program_builder_vk_offline.h  be_program_builder_vulkan.cpp  be_program_builder_vulkan.h  be_static_isa_analyzer.cpp  be_static_isa_analyzer.h  be_string_constants.h  be_utils.cpp  be_utils.h  gtDefinitions.h
RadeonGPUAnalyzerBackend/include/: beBackend.h  beD3DIncludeManager.h  beDataTypes.h  beDriverUtils.h  beInclude.h  beOpenCLDefs.h  beProgramBuilder.h  beProgramBuilderDX.h  beProgramBuilderLightning.h  beProgramBuilderOpenCL.h  beProgramBuilderOpenGL.h  beProgramBuilderVulkan.h  beRGADllBuild.h  beStaticIsaAnalyzer.h  beStringConstants.h  beUtils.h  gtDefinitions.h
RadeonGPUAnalyzerBackend/src/: beBackend.cpp  beD3DIncludeManager.cpp  beDriverUtils.cpp  beProgramBuilder.cpp  beProgramBuilderDX.cpp  beProgramBuilderLightning.cpp  beProgramBuilderOpenCL.cpp  beProgramBuilderOpenGL.cpp  beProgramBuilderVkOffline.cpp  beProgramBuilderVulkan.cpp  beStaticIsaAnalyzer.cpp  beUtils.cpp
RadeonGPUAnalyzerCLI/: CMakeLists.txt  RadeonGPUAnalyzerCLIConfig.h.in
RadeonGPUAnalyzerCLI/Src/: CLIConfigFile.h  kcCLICommander.cpp  kcCLICommander.h  kcCLICommanderCL.cpp  kcCLICommanderCL.h  kcCLICommanderDX.cpp  kcCLICommanderDX11.cpp  kcCLICommanderDX11.h  kcCLICommanderDX12.cpp  kcCLICommanderDX12.h  kcCLICommanderLightning.cpp  kcCLICommanderLightning.h  kcCLICommanderOpenGL.cpp  kcCLICommanderOpenGL.h  kcCLICommanderVkOffline.cpp  kcCLICommanderVkOffline.h  kcCLICommanderVulkan.cpp  kcCLICommanderVulkan.h  kcCliStringConstants.h  kcConfig.cpp  kcConfig.h  kcIStatisticsParser.h  kcMain.cpp  kcOpenGLStatisticsParser.cpp  kcParseCmdLine.cpp  kcParseCmdLine.h  kcUtils.cpp  kcUtils.h  kcVulkanStatisticsParser.cpp  kcXmlWriter.cpp  kcXmlWriter.h  kc_cli_commander.cpp  kc_cli_commander.h  kc_cli_commander_cl.cpp  kc_cli_commander_cl.h  kc_cli_commander_dx11.cpp  kc_cli_commander_dx11.h  kc_cli_commander_dx12.cpp  kc_cli_commander_dx12.h  kc_cli_commander_lightning.cpp  (+24 more)
RadeonGPUAnalyzerCLI/src/: CLIConfigFile.h  kcCLICommander.cpp  kcCLICommander.h  kcCLICommanderCL.cpp  kcCLICommanderCL.h  kcCLICommanderDX.cpp  kcCLICommanderDX.h  kcCLICommanderLightning.cpp  kcCLICommanderLightning.h  kcCLICommanderOpenGL.cpp  kcCLICommanderOpenGL.h  kcCLICommanderVulkan.cpp  kcCLICommanderVulkan.h  kcCliStringConstants.h  kcConfig.cpp  kcConfig.h  kcDataTypes.h  kcFiles.cpp  kcFiles.h  kcIStatisticsParser.h  kcMain.cpp  kcOpenGLStatisticsParser.cpp  kcOpenGLStatisticsParser.h  kcParseCmdLine.cpp  kcParseCmdLine.h  kcUtils.cpp  kcUtils.h  kcVulkanStatisticsParser.cpp  kcVulkanStatisticsParser.h
RadeonGPUAnalyzerGUI/: CMakeLists.txt
RadeonGPUAnalyzerGUI/Include/: rgCliKernelListParser.h  rgCliLauncher.h  rgCliUtils.h  rgConfigFile.h  rgConfigFileDefinitions.h  rgConfigFileOpenCL.h  rgConfigFileVulkan.h  rgConfigManager.h  rgCsvFileParser.h  rgDataTypes.h  rgDataTypesOpenCL.h  rgDataTypesVulkan.h  rgDefinitions.h  rgFactory.h  rgFactoryOpenCL.h  rgFactoryVulkan.h  rgObjectNames.h  rgPipelineStateSearcher.h  rgResourceUsageCsvFileParser.h  rgStringConstants.h  rgUtils.h  rgUtilsGraphics.h  rgUtilsVulkan.h
RadeonGPUAnalyzerGUI/Res/: RadeonGPUAnalyzerGUI.qrc
RadeonGPUAnalyzerGUI/Src/: main.cpp  rgAboutDialog.cpp  rgAppState.cpp  rgAppStateOpenCL.cpp  rgAppStateVulkan.cpp  rgBrowseButton.cpp  rgBrowseMissingFileDialog.cpp  rgBuildSettingsView.cpp  rgBuildSettingsViewOpenCL.cpp  rgBuildSettingsViewVulkan.cpp  rgBuildView.cpp  rgBuildViewGraphics.cpp  rgBuildViewOpenCL.cpp  rgBuildViewVulkan.cpp  rgCheckBox.cpp  rgCliLauncher.cpp  rgCliUtils.cpp  rgComboBox.cpp  rgConfigFile.cpp  rgConfigFileOpenCL.cpp  rgConfigFileVulkan.cpp  rgConfigManager.cpp  rgCsvFileParser.cpp  rgEditorElement.cpp  rgEditorElementArrayElementAdd.cpp  rgEditorElementArrayElementRemove.cpp  rgEditorElementBool.cpp  rgEditorElementEnum.cpp  rgFactoryVulkan.cpp  rgFindTextWidget.cpp  rgGlobalSettingsView.cpp  rgHandleTabFocusEventFilter.cpp  rgIsaDisassemblyCustomTableView.cpp  rgIsaDisassemblyTabView.cpp  rgIsaDisassemblyTableModel.cpp  rgIsaDisassemblyView.cpp  rgIsaDisassemblyViewGraphics.cpp  rgIsaDisassemblyViewOpenCL.cpp  rgIsaDisassemblyViewTitlebar.cpp  rgIsaDisassemblyViewVulkan.cpp  (+48 more)
RadeonGPUAnalyzerGUI/Ui/: rgAboutDialog.ui  rgBuildSettingsViewOpenCL.ui  rgBuildSettingsViewVulkan.ui  rgCliOutputView.ui  rgFindTextWidget.ui  rgGlobalSettingsView.ui  rgIsaDisassemblyView.ui  rgMainWindow.ui  rgMenuPipelineStateItem.ui  rgOrderedListViewDialog.ui  rgPipelineStateEditorWidgetArray.ui  rgPipelineStateEditorWidgetArrayElement.ui  rgPipelineStateTree.ui  (+10 more)
source/: CMakeLists.txt
(+1046 files in other folders)
